[package]
name = "stock-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "migrate", "bigdecimal"] }
dotenvy = "0.15"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
